<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ranks -->
    <string name="rank_seaman">Seaman</string>
    <string name="rank_po3">Petty Officer Third Class</string>
    <string name="rank_po2">Petty Officer Second Class</string>
    <string name="rank_po1">Petty Officer First Class</string>
    <string name="rank_cpo">Chief Petty Officer</string>
    <string name="rank_cspo">Chief Ship Petty Officer</string>
    <string name="rank_wo">Warrant Officer</string>
    <string name="rank_cwo">Chief Warrant Officer</string>
    <string name="rank_o1">Ensign</string>
    <string name="rank_o2">Lieutenant (junior)</string>
    <string name="rank_o3">Lieutenant</string>
    <string name="rank_o4">Lieutenant Commander</string>
    <string name="rank_o5">Commander</string>
    <string name="rank_o6">Captain</string>
    <string name="rank_o7">Rear Admiral (lower half)</string>
    <string name="rank_o8">Rear Admiral</string>
    <string name="rank_o9">Vice Admiral</string>
    <string name="rank_o10">Admiral</string>
    <string name="rank_o11">Fleet Admiral</string>
    <string name="rank_o12">Admiral of the Navy</string>

    <!--  -->
    <string name="rate_request">If you like this game please rate it to support the developer. Thank you in advance!</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="leaderboards_request">Please sign in with Google to view Leaderboards.</string>
    <string name="achievements_request">Please sign in with Google to view Achievements.</string>
    <string name="internet_request">Please sign in with Google to play online game with your friends.</string>
    <string name="sign_in">Sign In</string>
    <string name="error">Error</string>
    <string name="match_canceled">Match has been canceled</string>
    <string name="network_error">A network error occurred. Please check your network connection.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_str">Continue</string>
    <string name="play">Play</string>
    <string name="connection_lost">Connection with the opponent has been lost</string>
    <string name="got_it">Got It</string>

    <!-- main screen -->
    <string name="app_name">Sea Battle</string>
    <string name="help">Help</string>
    <string name="share_greeting">Check out great \"Sea Battle\" app at: </string>
    <string name="want_to_leave_room">Do you want to abandon the game with %1$s?</string>
    <string name="purchase_error">Could not complete purchase. Please try later. Your account has not been charged.</string>
    <string name="purchase_success">You have successfully removed the ads. Please restart the app.</string>

    <!-- select game screen -->
    <string name="vs_android">vs. Android</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="internet">Internet</string>
    <string name="nick">Enter your nickname</string>
    <string name="see_ranks">Click on the rank to see your progress</string>

    <!-- internet game screen -->
    <string name="quick_game">Quick Game</string>
    <string name="invite_player">Invite Player</string>
    <string name="view_invitations">View Invitations</string>

    <!-- setup -->
    <string name="auto">Auto</string>
    <string name="done">Done</string>
    <string name="only_horizontal_ships">Your board contains only horizontal ships.</string>
    <string name="rearrange">Rearrange</string>
    <string name="ships_setup_validation">You must set your ships first</string>
    <string name="place_instruction">Move the ship to place it on the board</string>
    <string name="rotate_instruction">Tap on a ship to rotate</string>
    <string name="session_timeout">Your session timed out: it took you too long to place the ships</string>

    <!-- gameplay -->
    <string name="abandon_game_question">Are you sure you want to abandon the battle?</string>
    <string name="surrender_question">Captain, do you really want to surrender? (%1$s points!)</string>
    <string name="opponent_left">Your opponent has left the game.</string>
    <string name="opponent_surrendered">Your opponent has surrendered!</string>
    <string name="opponent_setting_board">%1$s is placing ships</string>
    <string name="player">Player</string>
    <string name="android">Android</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="pause">Pause…</string>
    <string name="your_turn">Your turn</string>
    <string name="opponent_s_turn">Opponent\'s turn</string>
    <string name="match_against">Match against:</string>

    <!-- lost -->
    <string name="lost">You have lost&#8230;</string>

    <!-- win -->
    <string name="you_win">Victory!</string>
    <string name="continue_question">Another round?</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="report_problem">Report a Problem</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="sound_fx">Sound Effects</string>
    <string name="vibration">Vibration</string>
    <string name="sign_out">Sign Out from G+</string>

    <!-- Victory Screen -->
    <string name="total_scores">Total Scores:</string>

    <!-- Game Services -->
    <string name="sign_in_why">Sign in with Google to share your scores and play via internet.</string>
    <string name="sign_in_to_share">Sign in with Google to save your scores and achievements.</string>
    <string name="received_invitation">You have received invitation from %1$s</string>
    <string name="please_wait">Please Wait…</string>

    <!-- Bluetooth -->
    <string name="paring_instruction">In some cases devices must be paired in the settings before they can be visible in the game.</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="connecting_to">Connecting to %1$s…</string>
    <string name="discover">Discover</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="waiting_connection">Waiting for Connection…</string>
    <string name="select_device">Select Device</string>
    <string name="scan">SCAN</string>
    <string name="none_found">No devices found</string>
    <string name="discovering">Searching for devices…</string>
    <string name="bluetooth_not_available">Bluetooth is not available, please check your device\'s settings and try again.</string>

    <!-- ranks -->
    <string name="your_score">Your Score:</string>

</resources>