<com.ivygames.morskoiboi.ui.view.SelectGameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">
<!--
    <ImageButton
        android:id="@+id/help_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:background="@drawable/btn_circle_background"
        android:clickable="true"
        android:src="@drawable/action_help" />
-->
    <FrameLayout
        android:layout_above="@+id/rank_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/player_rank"
            android:layout_gravity="center"
            android:background="@drawable/enlisted_rank_background"
            android:padding="10dp"
            android:scaleType="center"
            android:src="@drawable/rank_po2" />
    </FrameLayout>

    <TextView
        android:id="@+id/rank_text"
        android:layout_width="match_parent"
        android:layout_above="@+id/player_name"
        android:gravity="center_horizontal"
        android:text="@string/rank_po3" />

    <EditText
        android:id="@+id/player_name"
        style="@style/Edit"
        android:layout_above="@+id/vs_android"
        android:layout_marginBottom="@dimen/main_buttons_margin"
        android:gravity="center_horizontal"
        android:hint="@string/nick"
        android:singleLine="true" />

    <Button
        android:id="@+id/vs_android"
        style="@style/Button.Menu"
        android:layout_above="@+id/via_bluetooth"
        android:text="@string/vs_android" />

    <Button
        android:id="@+id/via_bluetooth"
        style="@style/Button.Menu"
        android:layout_above="@+id/via_internet"
        android:text="@string/bluetooth" />

    <com.ivygames.morskoiboi.ui.view.InvitationButton
        android:id="@+id/via_internet"
        style="@style/Button.Menu"
        android:layout_alignParentBottom="true"
        android:text="@string/internet" />

</com.ivygames.morskoiboi.ui.view.SelectGameLayout>