<com.ivygames.morskoiboi.ui.view.SettingsLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/default_background"
    android:orientation="vertical">

    <TextView
        style="@style/VersionText"
        android:layout_gravity="right"
        android:layout_margin="@dimen/version_margin"
        android:text="@string/versionName" />

    <TextView
        style="@style/SettingsHeaderText"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/settings" />

    <RelativeLayout
        android:id="@+id/sign_out_bar"
        style="@style/SettingsContainer"
        android:visibility="gone">

        <TextView
            style="@style/SettingsText"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/sign_out_btn"
            android:text="@string/sign_out" />

        <ImageButton
            android:id="@+id/sign_out_btn"
            style="@style/SettingsButton"
            android:layout_width="@dimen/big_circle_size"
            android:layout_height="@dimen/big_circle_size"
            android:background="@drawable/btn_circle_background"
            android:src="@drawable/logout_normal" />
    </RelativeLayout>

    <include
        android:id="@+id/sign_in_bar"
        style="@style/SettingsContainer"
        layout="@layout/sign_in_bar" />

    <RelativeLayout style="@style/SettingsContainer">

        <TextView
            style="@style/SettingsText"
            android:layout_toLeftOf="@+id/sound_btn"
            android:text="@string/sound_fx" />

        <ImageButton
            android:id="@+id/sound_btn"
            style="@style/SettingsButton"
            android:layout_width="@dimen/settings_circle_size"
            android:layout_height="@dimen/settings_circle_size"
            android:background="@drawable/btn_circle_background" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vibration_container"
        style="@style/SettingsContainer">

        <TextView
            style="@style/SettingsText"
            android:text="@string/vibration" />

        <ImageButton
            android:id="@+id/vibration_btn"
            style="@style/SettingsButton"
            android:layout_width="@dimen/big_circle_size"
            android:layout_height="@dimen/big_circle_size"
            android:background="@drawable/btn_circle_background" />
    </RelativeLayout>

    <!--
        <Button
        android:id="@+id/no_ads_btn"
        style="@style/Button.Menu"
        android:text="@string/remove_ads" />
    -->

    <Button
        android:id="@+id/report_problem"
        style="@style/Button.Menu"
        android:text="@string/report_problem" />

    <Button
        android:id="@+id/rate_btn"
        style="@style/Button.Menu"
        android:text="@string/rate" />

</com.ivygames.morskoiboi.ui.view.SettingsLayout>