<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">

    <ImageView
        android:id="@+id/drag_gesture"
        android:src="@drawable/drag_gesture"
        android:visibility="visible" />

    <TextView
        android:id="@+id/place_text"
        style="@style/TutorialText"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/place_instruction" />

    <ImageView
        android:id="@+id/tap_gesture"
        android:src="@drawable/tap" />

    <TextView
        android:id="@+id/rotate_text"
        style="@style/TutorialText"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/rotate_instruction" />

    <Button
        android:id="@+id/got_it_button"
        style="@style/TutorialButton"
        android:text="@string/got_it" />

</AbsoluteLayout>
