<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/continue_pannel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        style="@style/ContinueText"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/continue_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/main_buttons_margin"
        android:paddingLeft="@dimen/main_buttons_margin"
        android:paddingRight="@dimen/main_buttons_margin" >

        <Button
            android:id="@+id/yes_button"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no_button"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>