<?xml version="1.0" encoding="utf-8"?>
<com.ivygames.morskoiboi.ui.view.BluetoothLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/battleship_margin_horizontal"
    android:paddingRight="@dimen/battleship_margin_horizontal">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/bluetooth" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_game_btn"
            style="@style/Button.Menu"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_buttons_margin"
            android:text="@string/create_game" />

        <Button
            android:id="@+id/join_game_btn"
            style="@style/Button.Menu"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_buttons_margin"
            android:text="@string/join_game" />

        <TextView
            style="@style/HelpText"
            android:layout_width="match_parent"
            android:text="@string/paring_instruction" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</com.ivygames.morskoiboi.ui.view.BluetoothLayout>