<com.ivygames.morskoiboi.screen.internet.InternetGameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:paddingLeft="@dimen/battleship_margin_horizontal"
    android:paddingRight="@dimen/battleship_margin_horizontal">

    <ImageView
        android:layout_above="@+id/player_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/multiplayer" />

    <TextView
        android:id="@+id/player_name"
        style="@style/PlayerNameText"
        android:layout_width="match_parent"
        android:layout_above="@+id/quick_game_button"
        android:layout_marginBottom="@dimen/main_buttons_margin"
        android:layout_marginLeft="@dimen/main_buttons_margin"
        android:layout_marginRight="@dimen/main_buttons_margin"
        android:gravity="center_horizontal"
        android:text="Sagi Mizrachi"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/quick_game_button"
        style="@style/Button.Menu"
        android:layout_above="@+id/invite_player_button"
        android:text="@string/quick_game" />

    <Button
        android:id="@+id/invite_player_button"
        style="@style/Button.Menu"
        android:layout_above="@+id/view_invitations_button"
        android:text="@string/invite_player" />

    <com.ivygames.morskoiboi.screen.view.InvitationButton
        android:id="@+id/view_invitations_button"
        style="@style/Button.Menu"
        android:layout_alignParentBottom="true"
        android:text="@string/view_invitations" />

</com.ivygames.morskoiboi.screen.internet.InternetGameLayout>