<com.ivygames.morskoiboi.screen.win.WinLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/battleship_margin_horizontal"
    android:paddingRight="@dimen/battleship_margin_horizontal"
    tools:ignore="HardcodedText">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/win_top_margin"
        android:layout_marginRight="@dimen/win_top_margin"
        android:layout_marginTop="@dimen/win_top_margin"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_gravity="right"
            android:drawableLeft="@drawable/stopwatch"
            android:text="2:51"
            android:textColor="@color/main"
            android:textSize="@dimen/win_normal_text" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/you_win"
            android:textColor="@color/victory_text"
            android:textSize="@dimen/victory_text" />

        <ImageView
            android:id="@+id/carrier"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:scaleType="center"
            android:src="@drawable/carrier_big"
            android:visibility="visible" />
    </FrameLayout>

    <View
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sign_in_bar"
        style="@style/SignInBar"
        android:layout_width="match_parent">

        <com.google.android.gms.common.SignInButton android:id="@+id/sign_in_button" />

        <TextView
            style="@style/SinInText"
            android:layout_width="0dp"
            android:layout_margin="@dimen/sign_in_text_margin"
            android:layout_weight="1"
            android:text="@string/sign_in_to_share" />
    </LinearLayout>

    <include layout="@layout/fleet" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="@color/main" />

    <RelativeLayout
        android:id="@+id/scores_container"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:paddingLeft="@dimen/win_horizontal_margin"
        android:paddingRight="@dimen/win_horizontal_margin">

        <TextView
            style="@style/NormalText"
            android:text="@string/total_scores" />

        <TextView
            android:id="@+id/total_scores"
            style="@style/ScoresText"
            android:layout_alignParentRight="true"
            android:text="34543" />
    </RelativeLayout>

    <View
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include
        android:id="@+id/continue_panel"
        layout="@layout/continue_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <include
        android:id="@+id/surrender_continue_panel"
        layout="@layout/surrendered_continue_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</com.ivygames.morskoiboi.screen.win.WinLayout>